--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: "Mulish";
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
+}
+
+.currentQuestion {
+	background: linear-gradient(180deg, #f6b868 0%, #ee6b2d 100%);
+}
+
+h1.question {
+	font-family: "Mulish";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 140%;
+	/* identical to box height, or 56px */
+	display: flex;
+	align-items: center;
+
+	/* White */
+	color: #ffffff;
+}
+
+.answerOptions {
+	font-family: "Mulish";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 160%;
+	border: 2px solid #f9d29f;
+	box-sizing: border-box;
+	border-radius: 100px;
+	margin-top: 20px;
+	display: flex;
+	flex-direction: row;
+
+	justify-content: center;
+	align-items: center;
+	max-width: 800px;
+}
+
+.answerOptions .answerOption {
+	padding: 20px;
+	text-align: center;
+	flex: 1;
+}
+
+.answerOptions .answerOption.selected {
+	background: #f8caa3;
+	border-radius: 100px;
+	color: #9f938b;
+}
+
+/* Small screens */
+@media all and (max-width: 500px) {
+	h1.question {
+		font-size: 20px;
+	}
+	.answerOptions {
+		/* On small screens, we are no longer using row direction but column */
+		flex-direction: column;
+		font-size: 18px;
+	}
+	.answerOptions .answerOption {
+		padding: 10px;
+		flex: 1;
+		width: 100%;
+		height: 100px;
+	}
+  .answerOptions .answerOption:last-child {
+		border-radius: 0 0 100px 100px;
+	}
+  .answerOptions .answerOption:first-child {
+		border-radius: 100px 100px 0 0;
+	}
 }
