--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ code {
 
 .currentQuestion {
 	background: linear-gradient(180deg, #f6b868 0%, #ee6b2d 100%);
+  padding: 20px;
+}
+.currentQuestion.correct {
+  background: linear-gradient(180deg, #76E0C2 0%, #59CADA 100%);
 }
 
 h1.question {
@@ -20,9 +24,6 @@ h1.question {
 	font-weight: 700;
 	font-size: 40px;
 	line-height: 140%;
-	/* identical to box height, or 56px */
-	display: flex;
-	align-items: center;
 
 	/* White */
 	color: #ffffff;
@@ -37,7 +38,7 @@ h1.question {
 	border: 2px solid #f9d29f;
 	box-sizing: border-box;
 	border-radius: 100px;
-	margin-top: 20px;
+	margin: 20px auto 0 auto;
 	display: flex;
 	flex-direction: row;
 
@@ -47,7 +48,6 @@ h1.question {
 }
 
 .answerOptions .answerOption {
-	padding: 20px;
 	text-align: center;
 	flex: 1;
 }
@@ -69,11 +69,14 @@ h1.question {
 		font-size: 18px;
 	}
 	.answerOptions .answerOption {
-		padding: 10px;
 		flex: 1;
 		width: 100%;
 		height: 100px;
+    border-radius: 0;
 	}
+  .answerOptions .answerOption.selected {
+    border-radius: 0;
+  }
   .answerOptions .answerOption:last-child {
 		border-radius: 0 0 100px 100px;
 	}
