--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,33 @@ code {
 		monospace;
 }
 
+.hidden {
+	display: none;
+}
+
+.buttons {
+	display: flex;
+	flex-direction: row;
+
+	justify-content: center;
+	align-items: center;}
+
+button {
+	font-family: "Mulish";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 160%;
+	border: 2px solid #fff;
+	box-sizing: border-box;
+	border-radius: 100px;
+	margin: 20px 20px 0 auto;
+	flex-direction: row;
+	justify-content: center;
+	padding: 10px;
+	flex: 1;
+}
+
 .currentQuestion {
 	background: linear-gradient(180deg, #f6b868 0%, #ee6b2d 100%);
 	padding: 20px;
@@ -35,6 +62,15 @@ h1.question {
 	color: #ffffff;
 }
 
+h2 {
+	font-family: "Mulish";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 32px;
+	line-height: 140%;
+	color: #ffffff;
+}
+
 .answerOptions {
 	font-family: "Mulish";
 	font-style: normal;
@@ -56,7 +92,9 @@ h1.question {
 .answerOptions .answerOption {
 	text-align: center;
 	flex: 1;
-  color: #fff;
+	color: #fff;
+	-webkit-animation: slide 0.5s forwards;
+	animation: slide 0.5s forwards;
 }
 
 .answerOptions .answerOption.selected {
@@ -84,6 +122,9 @@ h1.question {
 @media all and (max-width: 500px) {
 	h1.question {
 		font-size: 20px;
+	}
+	h2 {
+		font-size: 16px;
 	}
 	.answerOptions {
 		/* On small screens, we are no longer using row direction but column */
